--- a/ERS/Views/_ViewImports.cshtml
+++ b/ERS/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 @using Microsoft.AspNetCore.Identity
 @using ERS
 @using ERS.Models
+@using ERS.ViewModels
 @using ERS.Models.AccountViewModels
 @using ERS.Models.ManageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
