--- a/ERS/Views/Shared/_Layout.cshtml
+++ b/ERS/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link href="~/lib/jquery-ui-1.12.1/jquery-ui.css" rel="stylesheet" />
+        <link href="~/css/snackbar.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment exclude="Development">
@@ -15,6 +16,7 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link href="~/lib/jquery-ui-1.12.1/jquery-ui.css" rel="stylesheet" />
+        <link href="~/css/snackbar.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
 </head>
