--- a/ERS/Views/ESSInfoes/Create.cshtml
+++ b/ERS/Views/ESSInfoes/Create.cshtml
@@ -62,7 +62,16 @@
                     <div>
                         <button id="product-info-btn" class="btn btn-primary pull-left">Product Info +</button>
                         
-                        <button id="product-template-btn" class="btn btn-primary pull-right">Product Template +</button>
+                        <div class="form-inline pull-right">
+                            <div class="form-group">
+                                <select id="templateList" class="form-control col-md-4" asp-items="@(new SelectList(Model.ProductTemplates))">
+                                    <option>Choose Template</option>
+                                </select>
+                            </div>
+                            <button id="product-template-btn" class="btn btn-primary">
+                                <span class="glyphicon glyphicon-plus"></span>
+                            </button>
+                        </div>                        
                     </div>
                     <div style="padding-top: 50px;">
                         <table class="table">
@@ -74,8 +83,6 @@
                                     <td class="col-md-3">Price</td>
                                     <td class="col-md-1"></td>
                                 </tr>
-                            </thead>
-                            <tbody>
                                 <tr>
                                     <td>-</td>
                                     <td>
@@ -83,12 +90,15 @@
                                             <option>Select Product</option>
                                         </select>
                                     </td>
-                                    <td><input class="form-control squre" /></td>
-                                    <td><input class="form-control squre" /></td>
+                                    <td><input id="productQuantity" class="form-control squre" /></td>
+                                    <td><input id="productPrice" class="form-control squre" /></td>
                                     <td>
-                                        <button class="btn btn-default"><span class="glyphicon glyphicon-plus"></span></button>
+                                        <button id="individualProductAdd" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span></button>
                                     </td>
                                 </tr>
+                            </thead>
+                            <tbody id="addedProducts">
+                                
                             </tbody>
                             <tfoot style="border: 1px solid;">
                                 <tr>
@@ -99,6 +109,9 @@
                                 </tr>
                             </tfoot>
                         </table>
+                    </div>
+                    <div class="pull-left">
+                        <button id="deleteUncheckedItems" class="btn btn-default">Delete Unchecked Items</button>
                     </div>
                     <div class="pull-right">
                         <button id="reset-btn" type="reset" class="btn btn-danger">Reset</button>
@@ -180,7 +193,7 @@
         </div>
         <div class="form-inline">
             <div class="form-group">
-                <select id="product-id" class="form-control" asp-items="@(new SelectList(Model.Products, "Id","Name"))">
+                <select id="product-id" class="form-control col-md-5" asp-items="@(new SelectList(Model.Products, "Id","Name"))">
                     <option>Select Product Name</option>
                 </select>
             </div>
