--- a/ERS/Views/ESSInfoes/Create.cshtml
+++ b/ERS/Views/ESSInfoes/Create.cshtml
@@ -16,6 +16,7 @@
                 <div class="form-group">
                     <label asp-for="ESSInfo.ESSCode"></label>
                     <input id="ess-code" class="form-control" asp-for="ESSInfo.ESSCode" readonly />
+                    <input id="employeeId" hidden />
                 </div>
             </div>
             <div class="form-inline">
