--- a/ERS/Views/ESSInfoes/Edit.cshtml
+++ b/ERS/Views/ESSInfoes/Edit.cshtml
@@ -1,50 +1,380 @@
-﻿@model ERS.Models.ESSInfo
+﻿@model ESSEditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    double quantity = 0;
+    double price = 0;
 }
 
-<h2>Edit</h2>
+<h2 class="alert alert-info text-center">ESS Entry Form</h2>
 
-<h4>ESSInfo</h4>
 <hr />
+
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="ESSCode" class="control-label"></label>
-                <input asp-for="ESSCode" class="form-control" />
-                <span asp-validation-for="ESSCode" class="text-danger"></span>
+    <div class="col-md-12">
+        <form>
+            <div class="form-inline">
+                <div class="form-group">
+                    <label asp-for="ESSCode"></label>
+                    <input id="ess-code" class="form-control" asp-for="ESSCode" readonly />
+                    <input id="employeeId" hidden />
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="WorkingArea" class="control-label"></label>
-                <input asp-for="WorkingArea" class="form-control" />
-                <span asp-validation-for="WorkingArea" class="text-danger"></span>
+            <div class="form-inline">
+                <div class="form-group">
+                    <label asp-for="Name"></label>
+                    <input id="employee-name" class="form-control" asp-for="Name" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Designation"></label>
+                    <input id="designation" class="form-control" asp-for="Designation" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="WorkingArea"></label>
+                    <input id="workingArea" class="form-control" asp-for="WorkingArea" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Phone"></label>
+                    <input id="employee-phone" class="form-control" asp-for="Phone" />
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="EntryTime" class="control-label"></label>
-                <input asp-for="EntryTime" class="form-control" />
-                <span asp-validation-for="EntryTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EmployeeId" class="control-label"></label>
-                <select asp-for="EmployeeId" class="form-control" asp-items="ViewBag.EmployeeId"></select>
-                <span asp-validation-for="EmployeeId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <hr />
+            <div class="height-auto">
+                <div class="col-md-3 devide">
+                    <div class="height">
+                        <button id="division-btn" class="btn btn-primary">Division Info +</button>
+                        <div id="divisions">
+                            <div class="wrapper">
+                                @foreach (var item in Model.EmpDivisions)
+                                {
+                                    <button class="btn btn-default" value="@item.Division.Name">@item.Division.Name</button>
+                                }
+                            </div>
+                        </div>
+                    </div>
+                    <div class="height">
+                        <button id="zilla-btn" class="btn btn-primary">Zilla Info +</button>
+                        <div id="districts">
+                            <div class="wrapper">
+                                @foreach (var item in Model.EmpDistricts)
+                                {
+                                    <button class="btn btn-default" value="@item.District.Name">@item.District.Name</button>
+                                }
+                            </div>
+                        </div>
+                    </div>
+                    <div class="height">
+                        <button id="upazila-btn" class="btn btn-primary">Upazila Info +</button>
+                        <div id="upazilas">
+                            <div class="wrapper">
+                                @foreach (var item in Model.EmpUpazilas)
+                                {
+                                    <button class="btn btn-default" value="@item.Upazila.Name">@item.Upazila.Name</button>
+                                }
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div>
+                        <button id="product-info-btn" class="btn btn-primary pull-left">Product Info +</button>
+
+                        <div class="form-inline pull-right">
+                            <div class="form-group">
+                                <select id="templateList" class="form-control col-md-4" asp-items="@(new SelectList(Model.ProductTemplates))">
+                                    <option>Choose Template</option>
+                                </select>
+                            </div>
+                            <button id="product-template-btn" class="btn btn-primary">
+                                <span class="glyphicon glyphicon-plus"></span>
+                            </button>
+                        </div>
+                    </div>
+                    <div style="padding-top: 50px;">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <td class="col-md-1"><input id="head-checkbox" type="checkbox" /></td>
+                                    <td class="col-md-4">Product Name</td>
+                                    <td class="col-md-3">Quantity</td>
+                                    <td class="col-md-3">Price</td>
+                                    <td class="col-md-1"></td>
+                                </tr>
+                                <tr>
+                                    <td>-</td>
+                                    <td>
+                                        <select id="productList" class="form-control squre" asp-items="@(new SelectList(Model.Products, "Id","Name"))">
+                                            <option>Select Product</option>
+                                        </select>
+                                    </td>
+                                    <td><input id="productQuantity" class="form-control squre" /></td>
+                                    <td><input id="productPrice" class="form-control squre" /></td>
+                                    <td>
+                                        <button id="individualProductAdd" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span></button>
+                                    </td>
+                                </tr>
+                            </thead>
+                            <tbody id="addedProducts">
+                                @foreach (var item in Model.EmpProducts)
+                                {
+                                    quantity += item.Quantity;
+                                    price += item.Price;
+                                    <tr class="existed-product">
+                                        <td><input type="checkbox" value="@item.Product.Id+@item.Price" checked /></td>
+                                        <td>@item.Product.Name</td>
+                                        <td>@item.Quantity</td>
+                                        <td>@item.Price</td>
+                                        <td></td>
+                                    </tr>
+                                }
+                            </tbody>
+                            <tfoot style="border: 1px solid;">
+                                <tr>
+                                    <td>-</td>
+                                    <td>Total</td>
+                                    <td>@quantity</td>
+                                    <td>@price</td>
+                                    <td></td>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                    <div class="pull-left">
+                        <button id="deleteUncheckedItems" class="btn btn-default">Delete Unchecked Items</button>
+                    </div>
+                    <div class="pull-right">
+                        <button id="reset-btn" type="reset" class="btn btn-danger">Reset</button>
+                        <button id="submit-btn" type="button" class="btn btn-success">Submit</button>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div id="division" title="Division Info">
+    <div class="col-md-12">
+        <div class="col-md-6 select">
+            <ul class="list">
+                @foreach (var item in Model.Divisions)
+                {
+                    @foreach (var item2 in Model.EmpDivisions)
+                    {
+                        if (item.Name == item2.Division.Name)
+                        {
+                            <li><button class="btn btn-default division-clicked btn-success existed-division" value="@item.Name">@item.Name</button></li>
+                        }
+                        else
+                        {
+                            <li><button class="btn btn-default division-clicked" value="@item.Name">@item.Name</button></li>
+                        }
+                    }
+
+                }
+            </ul>
+        </div>
+        <div class="col-md-6 division-selected">
+            @foreach (var item2 in Model.EmpDivisions)
+            {
+                <div id="@item2.Division.Name" class="wrapper">
+                    <button class="btn-link" value="@item2.Division.Name">@item2.Division.Name</button>
+                </div>
+            }
+        </div>
+    </div>
 </div>
+
+<div id="district" title="District Info">
+    <div class="col-md-12">
+        <div class="col-md-6 select">
+            <ul class="list">
+                @foreach (var item in Model.Districts)
+                {
+                    @foreach (var item2 in Model.EmpDistricts)
+                    {
+                        if (item.Name == item2.District.Name)
+                        {
+                            <li><button class="btn btn-default district-clicked btn-success existed-district" value="@item.Name">@item.Name</button></li>
+                        }
+                        else
+                        {
+                            <li><button class="btn btn-default district-clicked" value="@item.Name">@item.Name</button></li>
+                        }
+                    }
+
+                }
+            </ul>
+        </div>
+        <div class="col-md-6 district-selected">
+            @foreach (var item2 in Model.EmpDistricts)
+            {
+                <div id="@item2.District.Name" class="wrapper">
+                    <button class="btn-link" value="@item2.District.Name">@item2.District.Name</button>
+                </div>
+            }
+        </div>
+    </div>
+</div>
+
+<div id="upazila" title="Upazila Info">
+    <div class="col-md-12">
+        <div class="col-md-6 select">
+            <ul class="list">
+                @foreach (var item in Model.Upazilas)
+                {
+                    @foreach (var item2 in Model.EmpUpazilas)
+                    {
+                        if (item.Name == item2.Upazila.Name)
+                        {
+                            <li><button class="btn btn-default upazila-clicked btn-success existed-upazila" value="@item.Name">@item.Name</button></li>
+                        }
+                        else
+                        {
+                            <li><button class="btn btn-default upazila-clicked" value="@item.Name">@item.Name</button></li>
+                        }
+                    }
+
+                }
+            </ul>
+        </div>
+        <div class="col-md-6 upazila-selected">
+            @foreach (var item2 in Model.EmpUpazilas)
+            {
+                <div id="@item2.Upazila.Name" class="wrapper">
+                    <button class="btn-link" value="@item2.Upazila.Name">@item2.Upazila.Name</button>
+                </div>
+            }
+        </div>
+    </div>
+</div>
+
+<div id="product-info" title="Product Info">
+    <div class="col-md-12">
+        <form>
+            <div class="form-group">
+                <label>Product Name</label>
+                <input id="product-name" class="form-control" />
+            </div>
+            <button id="prodcut-submit-btn" class="btn btn-default">Submit</button>
+        </form>
+    </div>
+</div>
+
+<div id="product-template" title="Product Info">
+    <div class="col-md-12">
+        <div class="form-inline">
+            <div class="form-group">
+                <input id="template-name" class="form-control" placeholder="Template Name" />
+            </div>
+            <button id="save-template-btn" class="btn btn-primary">Save Template</button>
+        </div>
+        <div class="form-inline">
+            <div class="form-group">
+                <select id="product-id" class="form-control col-md-5" asp-items="@(new SelectList(Model.Products, "Id","Name"))">
+                    <option>Select Product Name</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <input id="product-quantity" class="form-control" placeholder="Product Quantity" />
+            </div>
+            <div class="form-group">
+                <input id="product-price" class="form-control" placeholder="Product Price" />
+            </div>
+            <button id="prodcut-template-add-btn" class="btn btn-default">
+                <span class="glyphicon glyphicon-plus"></span>
+            </button>
+        </div>
+        <div>
+            <table class="table table-hover table-bordered">
+                <tbody id="template-body"></tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+<div id="snackbar">Saved</div>
+<div id="snackbar">Not Saved</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $("#division").dialog({
+            width: "400px",
+            modal: true,
+            resizable: false,
+            autoOpen: false,
+            show: {
+                effect: "fade",
+                duration: 500
+            },
+            hide: {
+                effect: "fade",
+                duration: 500
+            }
+        });
+
+        $("#district").dialog({
+            width: "400px",
+            modal: true,
+            resizable: false,
+            autoOpen: false,
+            show: {
+                effect: "fade",
+                duration: 500
+            },
+            hide: {
+                effect: "fade",
+                duration: 500
+            }
+        });
+
+        $("#upazila").dialog({
+            width: "400px",
+            modal: true,
+            resizable: false,
+            autoOpen: false,
+            show: {
+                effect: "fade",
+                duration: 500
+            },
+            hide: {
+                effect: "fade",
+                duration: 500
+            }
+        });
+
+        $("#product-info").dialog({
+            width: "400px",
+            modal: true,
+            resizable: false,
+            autoOpen: false,
+            show: {
+                effect: "fade",
+                duration: 500
+            },
+            hide: {
+                effect: "fade",
+                duration: 500
+            }
+        });
+
+        $("#product-template").dialog({
+            width: "auto",
+            modal: true,
+            resizable: false,
+            autoOpen: false,
+            show: {
+                effect: "fade",
+                duration: 500
+            },
+            hide: {
+                effect: "fade",
+                duration: 500
+            }
+        });
+    </script>
+
+    <script src="~/js/ess-info.js"></script>
 }
